--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         compiler_version = '3.1.3'
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
         // NOTE: Do not place your application dependencies here; they belong
